fixing layout/size of logo on small admin header

--- a/html/css/sass/admin/_header.scss
+++ b/html/css/sass/admin/_header.scss
@@ -142,7 +142,7 @@
 }
 
 .header_admin_small-logo {
-    svg {
+    img, svg {
         width: 2.3em;
         height: 2.6em;
     }
